--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Document</title>
 </head>
-<body>
-  
+<body class=" flex justify-content-center-align-items-center">
+  <div class="drop flex justify-content-center-align-items-center"><i class="fab fa-apple"></i></div>
 </body>
 </html>
